--- a/app/src/main/res/layout/item_message_left.xml
+++ b/app/src/main/res/layout/item_message_left.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="2dp"
@@ -10,10 +10,10 @@
         android:id="@+id/textView_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
         android:background="@drawable/background_message_left"
-        android:padding="8dp"
-        android:textSize="18sp" />
+        android:fontFamily="@font/ubuntu"
+        android:padding="10dp"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/textView_seen"
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_message"
         android:layout_alignParentStart="true"
+        android:fontFamily="@font/ubuntu"
         android:visibility="gone" />
 
 </RelativeLayout>
