--- a/app/src/main/res/layout/item_message_right.xml
+++ b/app/src/main/res/layout/item_message_right.xml
@@ -11,10 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="5dp"
         android:background="@drawable/background_message_right"
         android:padding="10dp"
-        android:textSize="18sp" />
+        android:textSize="16sp"
+        android:fontFamily="@font/ubuntu"
+        android:textColor="@color/colorGray"/>
 
     <TextView
         android:id="@+id/textView_seen"
@@ -22,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_message"
         android:layout_alignParentEnd="true"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:fontFamily="@font/ubuntu"/>
 
 </RelativeLayout>
