--- a/app/src/main/res/drawable/background_message_left.xml
+++ b/app/src/main/res/drawable/background_message_left.xml
@@ -3,8 +3,7 @@
     android:shape="rectangle">
 
     <corners
-        android:radius="15dp"
-        android:topLeftRadius="0dp" />
+        android:radius="20dp" />
 
     <solid android:color="@color/colorGray" />
 
