--- a/app/src/main/res/drawable/background_message_right.xml
+++ b/app/src/main/res/drawable/background_message_right.xml
@@ -3,9 +3,8 @@
     android:shape="rectangle">
 
     <corners
-        android:radius="15dp"
-        android:topRightRadius="0dp" />
+        android:radius="20dp" />
 
-    <solid android:color="@color/colorCapgeminiBlue" />
+    <solid android:color="@color/colorVibrantBlue" />
 
 </shape>
