--- a/app/src/main/res/layout/item_message_left.xml
+++ b/app/src/main/res/layout/item_message_left.xml
@@ -2,26 +2,48 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="2dp"
-    android:layout_marginRight="10dp">
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="2dp">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/spade_red" />
+
+    <TextView
+        android:id="@+id/textView_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_toEndOf="@id/profile_image"
+        android:fontFamily="@font/ubuntu"
+        android:text="@string/placeholder_string"
+        android:textSize="12sp"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/textView_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/textView_name"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="100dp"
+        android:layout_toEndOf="@id/profile_image"
         android:background="@drawable/background_message_left"
         android:fontFamily="@font/ubuntu"
         android:padding="10dp"
+        android:textColor="@android:color/black"
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/textView_seen"
+        android:id="@+id/textView_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView_message"
-        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@id/textView_message"
+        android:layout_marginStart="-100dp"
+        android:layout_toEndOf="@id/textView_message"
         android:fontFamily="@font/ubuntu"
-        android:visibility="gone" />
+        android:textSize="12sp" />
 
 </RelativeLayout>
