--- a/app/src/main/res/layout/item_message_right.xml
+++ b/app/src/main/res/layout/item_message_right.xml
@@ -2,9 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
     android:layout_marginTop="2dp"
-    android:layout_marginRight="10dp">
+    android:layout_marginEnd="10dp">
 
     <TextView
         android:id="@+id/textView_message"
@@ -15,15 +14,29 @@
         android:padding="10dp"
         android:textSize="16sp"
         android:fontFamily="@font/ubuntu"
-        android:textColor="@color/colorGray"/>
+        android:layout_marginStart="100dp"
+        android:textColor="@color/colorGray" />
+
+    <TextView
+        android:id="@+id/textView_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="-100dp"
+        android:layout_toStartOf="@id/textView_message"
+        android:layout_alignBottom="@id/textView_message"
+        android:fontFamily="@font/ubuntu"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/textView_seen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_message"
+        android:layout_marginStart="10dp"
         android:layout_alignParentEnd="true"
+        android:fontFamily="@font/ubuntu"
         android:visibility="gone"
-        android:fontFamily="@font/ubuntu"/>
+        android:text="@string/placeholder_string"
+        android:textSize="12sp"/>
 
 </RelativeLayout>
