--- a/app/src/main/res/drawable/background_message_right.xml
+++ b/app/src/main/res/drawable/background_message_right.xml
@@ -5,6 +5,6 @@
     <corners
         android:radius="20dp" />
 
-    <solid android:color="@color/colorVibrantBlue" />
+    <solid android:color="@color/colorMessageBackgroundPurple" />
 
 </shape>
