--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -10,12 +10,48 @@
         android:id="@+id/toolbar"
         layout="@layout/common_toolbar" />
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/spade_red" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/online"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_alignBottom="@id/profile_image"
+            android:layout_marginStart="-22dp"
+            android:layout_toEndOf="@id/profile_image"
+            android:background="@drawable/background_online"
+            android:visibility="gone" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/offline"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_alignBottom="@id/profile_image"
+            android:layout_marginStart="-22dp"
+            android:layout_toEndOf="@id/profile_image"
+            android:background="@drawable/background_offline"
+            android:visibility="gone" />
+
+    </RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_message"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/compose_message"
-        android:layout_below="@id/toolbar" />
+        android:layout_below="@id/toolbar"
+        android:paddingTop="10dp" />
 
     <RelativeLayout
         android:id="@+id/compose_message"
@@ -32,12 +68,15 @@
             android:inputType="textCapSentences|textMultiLine"
             android:singleLine="false" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/btn_send"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignTop="@id/editText_message"
+            android:layout_alignBottom="@id/editText_message"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_send_grey_24dp" />
+            android:layout_marginStart="10dp"
+            android:src="@drawable/ic_send_blue_24dp" />
 
     </RelativeLayout>
 
