--- a/app/src/main/res/layout/item_message_left.xml
+++ b/app/src/main/res/layout/item_message_left.xml
@@ -16,6 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:layout_marginBottom="2dp"
         android:layout_toEndOf="@id/profile_image"
         android:fontFamily="@font/ubuntu"
         android:text="@string/placeholder_string"
@@ -40,10 +41,12 @@
         android:id="@+id/textView_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/textView_message"
-        android:layout_marginStart="-100dp"
-        android:layout_toEndOf="@id/textView_message"
+        android:layout_below="@id/textView_message"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="2dp"
+        android:layout_toEndOf="@id/profile_image"
         android:fontFamily="@font/ubuntu"
+        android:text="@string/placeholder_string"
         android:textSize="12sp" />
 
 </RelativeLayout>
