--- a/app/src/main/res/layout/item_message_right.xml
+++ b/app/src/main/res/layout/item_message_right.xml
@@ -10,33 +10,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/background_message_right"
-        android:padding="10dp"
-        android:textSize="16sp"
-        android:fontFamily="@font/ubuntu"
         android:layout_marginStart="100dp"
-        android:textColor="@color/colorGray" />
+        android:background="@drawable/background_message_right"
+        android:fontFamily="@font/ubuntu"
+        android:padding="10dp"
+        android:textColor="@color/colorGray"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/textView_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="-100dp"
-        android:layout_toStartOf="@id/textView_message"
-        android:layout_alignBottom="@id/textView_message"
+        android:layout_below="@id/textView_message"
+        android:layout_alignEnd="@id/textView_message"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="10dp"
         android:fontFamily="@font/ubuntu"
+        android:text="@string/placeholder_string"
         android:textSize="12sp" />
 
     <TextView
         android:id="@+id/textView_seen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView_message"
-        android:layout_marginStart="10dp"
+        android:layout_below="@id/textView_time"
+        android:layout_marginTop="2dp"
         android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10dp"
         android:fontFamily="@font/ubuntu"
-        android:visibility="gone"
         android:text="@string/placeholder_string"
-        android:textSize="12sp"/>
+        android:textSize="12sp"
+        android:visibility="gone" />
 
 </RelativeLayout>
