Continued implementing messaging

--- a/app/src/main/res/drawable/background_message_left.xml
+++ b/app/src/main/res/drawable/background_message_left.xml
@@ -5,7 +5,7 @@
     <corners
         android:radius="20dp" />
 
-    <solid android:color="@color/colorMessageBackgroundGray" />
+    <solid android:color="@color/colorWhite" />
 
 
 </shape>
