--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -50,21 +50,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/compose_message"
-        android:layout_below="@id/toolbar"
-        android:paddingTop="10dp" />
+        android:layout_below="@id/toolbar" />
 
     <RelativeLayout
         android:id="@+id/compose_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:background="@drawable/background_message_left"
+        android:elevation="2dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp">
 
         <EditText
             android:id="@+id/editText_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toStartOf="@id/btn_send"
+            android:fontFamily="@font/ubuntu"
+            android:hint="Type a message"
             android:inputType="textCapSentences|textMultiLine"
             android:singleLine="false" />
 
