--- a/app/src/main/res/layout/item_message_left.xml
+++ b/app/src/main/res/layout/item_message_left.xml
@@ -15,7 +15,7 @@
         android:id="@+id/textView_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="15dp"
         android:layout_marginBottom="2dp"
         android:layout_toEndOf="@id/profile_image"
         android:fontFamily="@font/ubuntu"
@@ -28,10 +28,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_name"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="5dp"
         android:layout_marginEnd="100dp"
         android:layout_toEndOf="@id/profile_image"
         android:background="@drawable/background_message_left"
+        android:elevation="2dp"
         android:fontFamily="@font/ubuntu"
         android:padding="10dp"
         android:textColor="@android:color/black"
@@ -42,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_message"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="2dp"
         android:layout_toEndOf="@id/profile_image"
         android:fontFamily="@font/ubuntu"
