--- a/app/src/main/res/layout/item_message_right.xml
+++ b/app/src/main/res/layout/item_message_right.xml
@@ -12,6 +12,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="100dp"
         android:background="@drawable/background_message_right"
+        android:elevation="2dp"
         android:fontFamily="@font/ubuntu"
         android:padding="10dp"
         android:textColor="@color/colorGray"
@@ -34,8 +35,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_time"
-        android:layout_marginTop="2dp"
         android:layout_alignParentEnd="true"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="10dp"
         android:fontFamily="@font/ubuntu"
         android:text="@string/placeholder_string"
