--- a/app/src/main/res/layout/item_message_right.xml
+++ b/app/src/main/res/layout/item_message_right.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="100dp"
+        android:layout_marginBottom="2dp"
         android:background="@drawable/background_message_right"
         android:elevation="2dp"
         android:fontFamily="@font/ubuntu"
@@ -24,11 +25,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_message"
         android:layout_alignEnd="@id/textView_message"
-        android:layout_marginTop="2dp"
         android:layout_marginEnd="10dp"
         android:fontFamily="@font/ubuntu"
         android:text="@string/placeholder_string"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/textView_seen"
