--- a/app/src/main/res/layout/item_message_left.xml
+++ b/app/src/main/res/layout/item_message_left.xml
@@ -15,11 +15,11 @@
         android:id="@+id/textView_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_toEndOf="@id/profile_image"
         android:layout_alignTop="@id/profile_image"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="2dp"
+        android:layout_toEndOf="@id/profile_image"
         android:fontFamily="@font/ubuntu"
-        android:text="@string/placeholder_string"
         android:textSize="12sp"
         android:visibility="visible" />
 
@@ -29,14 +29,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textView_name"
         android:layout_marginStart="5dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="70dp"
         android:layout_marginBottom="4dp"
         android:layout_toEndOf="@id/profile_image"
         android:background="@drawable/background_message_left"
         android:elevation="2dp"
         android:fontFamily="@font/ubuntu"
         android:padding="10dp"
-        android:text="@string/placeholder_string"
         android:textColor="@android:color/black"
         android:textSize="16sp" />
 
@@ -49,7 +48,6 @@
         android:layout_marginTop="-2dp"
         android:layout_toEndOf="@id/profile_image"
         android:fontFamily="@font/ubuntu"
-        android:text="@string/placeholder_string"
         android:textSize="12sp" />
 
 </RelativeLayout>
