--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -21,7 +21,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/spade_red" />
+            android:src="@drawable/spade_gray" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/online"
