--- a/app/src/main/res/layout/item_message_left.xml
+++ b/app/src/main/res/layout/item_message_left.xml
@@ -9,7 +9,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="2dp"
-        android:src="@drawable/spade_red" />
+        android:src="@drawable/spade_gray" />
 
     <TextView
         android:id="@+id/textView_name"
