--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
 
     <!-- background colours -->
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
     <color name="colorMetallicGray">#F3F3F3</color>
     <color name="colorMessageBackgroundPurple">#553b64</color>
     <color name="colorMessageBackgroundGray">#E5E5E5</color>
