--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,4 +32,8 @@
         <item name="android:background">@drawable/background_rounded_red</item>
     </style>
 
+    <style name="ButtonGray" parent="@android:style/Widget.Button">
+        <item name="android:background">@drawable/background_rounded_gray</item>
+    </style>
+
 </resources>
