--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -77,10 +77,10 @@
             android:id="@+id/btn_send"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_alignTop="@id/editText_message"
             android:layout_alignBottom="@id/editText_message"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="10dp"
+            android:layout_marginBottom="6dp"
             android:src="@drawable/ic_send_blue_24dp" />
 
     </RelativeLayout>
