--- a/app/src/main/res/layout/activity_setup_chat.xml
+++ b/app/src/main/res/layout/activity_setup_chat.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SetupChatActivity"
-    android:background="@color/colorCapgeminiBlue">
+    android:background="@color/colorCapgeminiBlue"
+    tools:context=".SetupChatActivity">
 
     <include
         android:id="@+id/toolbar"
@@ -16,19 +16,54 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:gravity="center"
-        android:orientation="vertical"
-        android:paddingStart="32dp"
-        android:paddingLeft="32dp"
-        android:paddingEnd="32dp"
-        android:paddingRight="32dp">
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/ubuntu"
+            android:gravity="center"
+            android:text="You will be talking to..."
+            android:textColor="@color/colorGray"
+            android:textSize="16sp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/spade_gray" />
+
+            <TextView
+                android:id="@+id/champion_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@id/profile_image"
+                android:layout_alignBottom="@id/profile_image"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@id/profile_image"
+                android:fontFamily="@font/ubuntu"
+                android:gravity="center"
+                android:textColor="@color/colorGray"
+                android:textSize="18sp" />
+
+        </RelativeLayout>
 
         <EditText
             android:id="@+id/editText_new_subject"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="15dp"
             android:fontFamily="@font/ubuntu"
             android:hint="What do you want to talk about?"
             android:inputType="textCapSentences"
