Changed settings to message editText

--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -71,6 +71,8 @@
             android:fontFamily="@font/ubuntu"
             android:hint="Type a message"
             android:inputType="textCapSentences|textMultiLine"
+            android:maxLines="6"
+            android:scrollbars="vertical"
             android:singleLine="false" />
 
         <ImageView
