--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -80,10 +80,19 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignBottom="@id/editText_message"
-            android:layout_alignParentEnd="true"
+            android:layout_toStartOf="@id/btn_more"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="6dp"
             android:src="@drawable/ic_send_blue_24dp" />
+
+        <ImageView
+            android:id="@+id/btn_more"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignBottom="@id/editText_message"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="6dp"
+            android:src="@drawable/ic_more_blue_24" />
 
     </RelativeLayout>
 
