Implemented showing archived chats and toggling

--- a/app/src/main/res/menu/menu_message.xml
+++ b/app/src/main/res/menu/menu_message.xml
@@ -4,6 +4,6 @@
 
     <item
         android:id="@+id/archive"
-        android:title="Mark chat as finished?"
+        android:title="Toggle Archived"
         app:showAsAction="never" />
 </menu>
