--- a/app/src/main/res/layout/fragment_champions.xml
+++ b/app/src/main/res/layout/fragment_champions.xml
@@ -6,9 +6,12 @@
     android:background="@color/colorMetallicGray"
     tools:context=".fragments.ChampionsFragment">
 
-    <ImageView
-        android:id="@+id/image"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:fontFamily="@font/ubuntu"
+        android:gravity="center"
+        android:text="Additional content here"
+        android:textSize="18sp" />
 
 </FrameLayout>
